--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/jumbotron/">
 
   <!-- Notificare core CSS -->
+  <link rel="stylesheet" href="https://cdn.notifica.re/libs/web/v3/latest/notificare-in-app-messaging.css" />
   <link rel="stylesheet" href="https://cdn.notifica.re/libs/web/v3/latest/notificare-push.css">
   <link rel="stylesheet" href="https://cdn.notifica.re/libs/web/v3/latest/notificare-push-ui.css">
 
@@ -91,6 +92,8 @@
   import { enableRemoteNotifications, disableRemoteNotifications} from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-push.js';
   import 'https://cdn.notifica.re/libs/web/v3/latest/notificare-push-ui.js';
   import 'https://cdn.notifica.re/libs/web/v3/latest/notificare-inbox.js';
+  import 'notificare-web/in-app-messaging';
+  import 'notificare-web/in-app-messaging/in-app-messaging.css';
 
   await launch();
 
