--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
   import { enableRemoteNotifications, disableRemoteNotifications} from 'https://cdn.notifica.re/libs/web/v3/latest/notificare-push.js';
   import 'https://cdn.notifica.re/libs/web/v3/latest/notificare-push-ui.js';
   import 'https://cdn.notifica.re/libs/web/v3/latest/notificare-inbox.js';
-  import 'notificare-web/in-app-messaging';
-  import 'notificare-web/in-app-messaging/in-app-messaging.css';
+  import 'https://cdn.notifica.re/libs/web/v3/latest/notificare-web/in-app-messaging';
+  import 'https://cdn.notifica.re/libs/web/v3/latest/notificare-web/in-app-messaging/in-app-messaging.css';
 
   await launch();
 
